fixed scrollbar issue

--- a/app/static/styles/room.css
+++ b/app/static/styles/room.css
@@ -18,16 +18,19 @@
   width: 50vw;
   height: 75vh;
   background-color: black;
+  padding-right: 10px;
 }
 
 .messages {
   overflow: auto;
   position: absolute;
   bottom: 50px;
-  max-height: 69.6vh;
+  max-height: 90%;
   color: white;
-  margin-left: 10px;
-  width: 100%;
+  margin: 0px 10px 0px 10px;
+  width: 99%;
+  scrollbar-gutter: stable;
+  scroll-margin-top: 50px;
 }
 
 .input {
